plugins {
	id 'java'
	id 'idea'
	id 'org.springframework.boot' version '3.1.5'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.sigursoft'
version = '0.0.1-SNAPSHOT'

repositories {
	mavenCentral()
}

java {
	toolchain {
		languageVersion.set(JavaLanguageVersion.of(21))
	}
}

dependencies {
	// API
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
	implementation 'org.mariadb:r2dbc-mariadb'

	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

	// TESTS
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	// JUnit 5
	testImplementation 'org.junit.jupiter:junit-jupiter'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	// Mockito
	testImplementation 'org.mockito:mockito-core'
	testImplementation 'org.mockito:mockito-junit-jupiter'
	// TestContainers
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:mariadb'
	testImplementation 'org.testcontainers:r2dbc'
	testImplementation 'org.mariadb.jdbc:mariadb-java-client'
}

test {
	jvmArgs = ['-Xshare:off', '-XX:+EnableDynamicAgentLoading']
	useJUnitPlatform()
	testLogging.events "passed", "skipped", "failed"
}
